Updated readme file

--- a/ReadMe/RunningtheApp.html
+++ b/ReadMe/RunningtheApp.html
@@ -13,7 +13,7 @@
      <h2>* Click on the Browse Directory Button to open the dialog box</h2>
 	    <img id="launch" src="images\opendialog.png">
      <h2>* Select the directory and press Ok</h2>	
-     <h2>* The visualiser is launched</h2>
+     <h2>* The visualiser is launched. Use the vertical scroll bar to scroll up or down</h2>
 	  <img id="launch" src="images\visualiser.png">
 	 <h2>* At anytime to exit the app, press the ExitApp button in the main window</h2>
 	  <img id="launch" src="images\exitapp.png">
